# home_bot

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py  test_redis_asyncio.py
app/core/: base_handler.py  config.py  filters.py
app/handlers/messages/: __init__.py
app/redis_consumer/: base.py  consumer.py  schemas.py
app/routers/: __init__.py
