[tool.poetry]
name = "home-bot"
version = "0.1.0"
description = ""
authors = ["Staselko <nat06024@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.1"
pydantic-settings = "^2.7.0"
aiogram = "^3.15.0"
loguru = "^0.7.3"
cachetools = "^5.5.0"
python-dateutil = "^2.9.0.post0"
redis = "^5.2.1"
motor = "^3.6.0"
setuptools = "^75.6.0"
async-timeout = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
